Move images and videos, change path

--- a/code/index.html
+++ b/code/index.html
@@ -25,7 +25,7 @@
     <header>
       <nav class="navbar">
         <a href="#"
-          ><img src="../img/a_cat.jpg" alt="Logo: A cat" class="logo-nav"
+          ><img src="../code/img/a_cat.jpg" alt="Logo: A cat" class="logo-nav"
         /></a>
         <div>
           <ul class="navbar-ul">
@@ -100,7 +100,7 @@
             <div class="img-big-news-div">
               <figure>
                 <img
-                  src="../img/illustratedYogaCat.png"
+                  src="../code/img/illustratedYogaCat.png"
                   class="img-big-news-illustration-one"
                   alt="An illustration of a cat sitting in the yoga lotus position"
                 />
@@ -124,7 +124,7 @@
             <div class="img-big-news-div">
               <figure>
                 <img
-                  src="../img/sunSalutatingCat.jpg"
+                  src="../code/img/sunSalutatingCat.jpg"
                   class="img-big-news-two"
                   alt="A cat doing yoga indoors"
                 />
@@ -170,7 +170,7 @@
                     </div>
                     <figure>
                       <img
-                        src="../img/climbingCat.jpg"
+                        src="../code/img/climbingCat.jpg"
                         class="img-other-news"
                         alt="A cat climbing"
                       />
@@ -214,7 +214,7 @@
                       </div>
                       <figure>
                         <img
-                          src="../img/outoodoorYogaCat.jpg"
+                          src="../code/img/outoodoorYogaCat.jpg"
                           class="img-other-news"
                           alt="A cat doing yoga outdoors"
                         />
@@ -255,7 +255,7 @@
                     </div>
                     <figure>
                       <img
-                        src="../img/walkingCat.jpeg"
+                        src="../code/img/walkingCat.jpeg"
                         class="img-other-news"
                         alt="A cat walking"
                       />
@@ -290,7 +290,7 @@
                     </div>
                     <figure>
                       <img
-                        src="../img/crunchingCat.jpg"
+                        src="../code/img/crunchingCat.jpg"
                         class="img-other-news"
                         alt="A cat doing crunches"
                       />
@@ -308,7 +308,7 @@
     </div>
     <footer>
       <div class="logo-footer">
-        <img src="../img/a_cat.jpg" alt="Logo, black cat" />
+        <img src="../code/img/a_cat.jpg" alt="Logo, black cat" />
         <span class="logoTextSpan">Michelle Wegler 2023</span>
       </div>
       <div class="footer-icons">
