--- a/code/mostwanted.html
+++ b/code/mostwanted.html
@@ -27,7 +27,7 @@
         <div class="container">
           <a href="index.html"
             ><img
-              src="../img/a_cat.jpg"
+              src="../code/img/a_cat.jpg"
               alt="logo"
               title="Logo, black cat"
               class="logo-nav"
@@ -106,7 +106,7 @@
             <div class="img-big-news-div">
               <figure>
                 <img
-                  src="../img/wanted.jpg"
+                  src="../code/img/wanted.jpg"
                   class="img-big-news-one"
                   alt="A cat climbing on the kitchen bench looking for something in the cupboard"
                 />
@@ -149,7 +149,7 @@
                     </div>
                     <figure>
                       <img
-                        src="../img/bb1.jpg"
+                        src="../code/img/bb1.jpg"
                         class="img-other-news"
                         alt="A cat in a paperboard box"
                       />
@@ -181,7 +181,7 @@
                       </div>
                       <figure>
                         <img
-                          src="../img/bb2.jpg"
+                          src="../code/img/bb2.jpg"
                           class="img-other-news"
                           alt="A cat in a carton board box"
                         />
@@ -219,7 +219,7 @@
                     </div>
                     <figure>
                       <img
-                        src="../img/bb3.jpg"
+                        src="../code/img/bb3.jpg"
                         class="img-other-news"
                         alt="A cat in a cardboard box"
                       />
@@ -251,7 +251,7 @@
                     </div>
                     <figure>
                       <img
-                        src="../img/bb4.jpg"
+                        src="../code/img/bb4.jpg"
                         class="img-other-news"
                         alt="A cat on a carton bed"
                       />
@@ -269,7 +269,7 @@
     </div>
     <footer>
       <div class="logo-footer">
-        <img src="../img/a_cat.jpg" alt="Logo, black cat" />
+        <img src="../code/img/a_cat.jpg" alt="Logo, black cat" />
         <span class="logoTextSpan">Michelle Wegler 2023</span>
       </div>
       <div class="footer-icons">
