--- a/code/newsreviews.html
+++ b/code/newsreviews.html
@@ -26,7 +26,7 @@
       <nav class="navbar">
         <a href="index.html"
           ><img
-            src="../img/a_cat.jpg"
+            src="../code/img/a_cat.jpg"
             alt="logo"
             title="Logo, black cat"
             class="logo-nav"
@@ -111,7 +111,7 @@
             <div class="video-big-news-div">
               <figure>
                 <video controls class="video-big-news-one">
-                  <source src="../video/catnip.mp4" type="video/mp4" />
+                  <source src="../code/video/catnip.mp4" type="video/mp4" />
                 </video>
                 <figcaption>
                   <em>Video:</em><em> Smirre Archives</em><em>Music:</em
@@ -132,7 +132,7 @@
             <div class="video-big-news-div">
               <figure>
                 <video controls class="video-big-news-two">
-                  <source src="../video/interview.mp4" type="video/mp4" />
+                  <source src="../code/video/interview.mp4" type="video/mp4" />
                 </video>
                 <figcaption class="video-big-news-two-figcaption">
                   <em>Video:</em><em> Smirre Archives</em>
@@ -175,7 +175,7 @@
                     </div>
                     <figure>
                       <img
-                        src="../img/bb5.jpg"
+                        src="../code/img/bb5.jpg"
                         class="img-other-news"
                         alt="Two cats looking out a window"
                       />
@@ -213,7 +213,7 @@
                       </div>
                       <figure>
                         <img
-                          src="../img/bb6.jpg"
+                          src="../code/img/bb6.jpg"
                           class="img-other-news"
                           alt="Two cats on opposite sides of a bed"
                         />
@@ -257,7 +257,7 @@
                     </div>
                     <figure>
                       <img
-                        src="../img/bb7.jpg"
+                        src="../code/img/bb7.jpg"
                         class="img-other-news"
                         alt="A cat sleeping on a bed close to a radiator"
                       />
@@ -288,7 +288,7 @@
                     </div>
                     <figure>
                       <img
-                        src="../img/bb8.jpg"
+                        src="../code/img/bb8.jpg"
                         class="img-other-news"
                         alt="A cat examining a foot bathtub"
                       />
@@ -331,7 +331,7 @@
                     </div>
                     <figure>
                       <img
-                        src="../img/bb9.jpg"
+                        src="../code/img/bb9.jpg"
                         class="img-other-news"
                         alt="A cat on a chair at a small table on a balcony"
                       />
@@ -366,7 +366,7 @@
                       </div>
                       <figure>
                         <img
-                          src="../img/bb10.jpg"
+                          src="../code/img/bb10.jpg"
                           class="img-other-news"
                           alt="Cat paw prints in the snow on a balcony"
                         />
@@ -404,7 +404,7 @@
                     </div>
                     <figure>
                       <img
-                        src="../img/bb11.jpg"
+                        src="../code/img/bb11.jpg"
                         class="img-other-news"
                         alt="A cat in a carton bed on a balcony"
                       />
@@ -436,7 +436,7 @@
                     </div>
                     <figure>
                       <img
-                        src="../img/bb12.jpg"
+                        src="../code/img/bb12.jpg"
                         class="img-other-news"
                         alt="A cat looking in to the camera with a TV with a wild cat in the background"
                       />
@@ -479,7 +479,7 @@
                     </div>
                     <figure>
                       <img
-                        src="../img/bb13.jpg"
+                        src="../code/img/bb13.jpg"
                         class="img-other-news"
                         alt="A cat on a yoga mat"
                       />
@@ -520,7 +520,7 @@
                       </div>
                       <figure>
                         <img
-                          src="../img/bb14.jpg"
+                          src="../code/img/bb14.jpg"
                           class="img-other-news"
                           alt="Two cats holding each other on an armchair"
                         />
@@ -564,7 +564,7 @@
                     </div>
                     <figure>
                       <img
-                        src="../img/bb15.jpg"
+                        src="../code/img/bb15.jpg"
                         class="img-other-news"
                         alt="Two cats in the sun on a balcony"
                       />
@@ -605,7 +605,7 @@
                     </div>
                     <figure>
                       <img
-                        src="../img/bb16.jpg"
+                        src="../code/img/bb16.jpg"
                         class="img-other-news"
                         alt="A cat raising one leg in the air"
                       />
@@ -623,7 +623,7 @@
     </div>
     <footer>
       <div class="logo-footer">
-        <img src="../img/a_cat.jpg" alt="Logo, black cat" />
+        <img src="../code/img/a_cat.jpg" alt="Logo, black cat" />
         <span class="logoTextSpan">Michelle Wegler 2023</span>
       </div>
       <div class="footer-icons">
