Change image naming to lowercase

--- a/code/index.html
+++ b/code/index.html
@@ -100,7 +100,7 @@
             <div class="img-big-news-div">
               <figure>
                 <img
-                  src="../code/img/illustratedYogaCat.png"
+                  src="../code/img/illustratedyogacat.png"
                   class="img-big-news-illustration-one"
                   alt="An illustration of a cat sitting in the yoga lotus position"
                 />
@@ -124,7 +124,7 @@
             <div class="img-big-news-div">
               <figure>
                 <img
-                  src="../code/img/sunSalutatingCat.jpg"
+                  src="../code/img/sunsalutatingcat.jpg"
                   class="img-big-news-two"
                   alt="A cat doing yoga indoors"
                 />
@@ -170,7 +170,7 @@
                     </div>
                     <figure>
                       <img
-                        src="../code/img/climbingCat.jpg"
+                        src="../code/img/climbingcat.jpg"
                         class="img-other-news"
                         alt="A cat climbing"
                       />
@@ -214,7 +214,7 @@
                       </div>
                       <figure>
                         <img
-                          src="../code/img/outoodoorYogaCat.jpg"
+                          src="../code/img/outoodooryogacat.jpg"
                           class="img-other-news"
                           alt="A cat doing yoga outdoors"
                         />
@@ -255,7 +255,7 @@
                     </div>
                     <figure>
                       <img
-                        src="../code/img/walkingCat.jpeg"
+                        src="../code/img/walkingcat.jpeg"
                         class="img-other-news"
                         alt="A cat walking"
                       />
@@ -290,7 +290,7 @@
                     </div>
                     <figure>
                       <img
-                        src="../code/img/crunchingCat.jpg"
+                        src="../code/img/crunchingcat.jpg"
                         class="img-other-news"
                         alt="A cat doing crunches"
                       />
