Updating GitHub Repo

--- a/code/index.html
+++ b/code/index.html
@@ -8,20 +8,17 @@
   </head>
   <body>
     <header>
-      <nav class="navbar">
-      <div class="logo">
-       <img class="logotype" src="./Images/Visit öland.png" alt="Logotype Visit Öland">
-      </div>
-      <div class="navbar-menu">
+      <img class="logotype" src="./Images/Visit öland.png" alt="Logotype Visit Öland">
+      <nav class="navbar">  
         <ul>
-          <div><li><a href="#"></a>Home</li></div>
-          <div><li><a href="#"></a>About</li></div>
-          <div><li><a href="#"></a>Contact</li></div>
-        </ul></div>
+          <div class="navbar-links 1"><li><a href="#"></a>Home</li></div>
+          <div class="navbar-links 2"><li><a href="#"></a>About</li></div>
+          <div class="navbar-links 3"><li><a href="#"></a>Contact</li></div>
+        </ul>
       </nav>
     </header>
-    
-    <img class="panorama" src="./Images/himmelsberga.jpeg" alt="Picture of windmill">
+    <div>
+    <img class="panorama" src="./Images/himmelsberga.jpeg" alt="Picture of windmill"></div>
     <section class="big-news">
       <!-- The big news content -->
     </section>
