Change path to image

--- a/code/index.html
+++ b/code/index.html
@@ -25,7 +25,7 @@
     <header>
       <nav class="navbar">
         <a href="#"
-          ><img src="../code/img/a_cat.jpg" alt="Logo: A cat" class="logo-nav"
+          ><img src="code/img/a_cat.jpg" alt="Logo: A cat" class="logo-nav"
         /></a>
         <div>
           <ul class="navbar-ul">
