Change all paths to images and videos

--- a/code/index.html
+++ b/code/index.html
@@ -100,7 +100,7 @@
             <div class="img-big-news-div">
               <figure>
                 <img
-                  src="../code/img/illustratedyogacat.png"
+                  src="img/illustratedyogacat.png"
                   class="img-big-news-illustration-one"
                   alt="An illustration of a cat sitting in the yoga lotus position"
                 />
@@ -124,7 +124,7 @@
             <div class="img-big-news-div">
               <figure>
                 <img
-                  src="../code/img/sunsalutatingcat.jpg"
+                  src="img/sunsalutatingcat.jpg"
                   class="img-big-news-two"
                   alt="A cat doing yoga indoors"
                 />
@@ -170,7 +170,7 @@
                     </div>
                     <figure>
                       <img
-                        src="../code/img/climbingcat.jpg"
+                        src="img/climbingcat.jpg"
                         class="img-other-news"
                         alt="A cat climbing"
                       />
@@ -214,7 +214,7 @@
                       </div>
                       <figure>
                         <img
-                          src="../code/img/outoodooryogacat.jpg"
+                          src="img/outoodooryogacat.jpg"
                           class="img-other-news"
                           alt="A cat doing yoga outdoors"
                         />
@@ -255,7 +255,7 @@
                     </div>
                     <figure>
                       <img
-                        src="../code/img/walkingcat.jpeg"
+                        src="img/walkingcat.jpeg"
                         class="img-other-news"
                         alt="A cat walking"
                       />
@@ -290,7 +290,7 @@
                     </div>
                     <figure>
                       <img
-                        src="../code/img/crunchingcat.jpg"
+                        src="img/crunchingcat.jpg"
                         class="img-other-news"
                         alt="A cat doing crunches"
                       />
@@ -308,7 +308,7 @@
     </div>
     <footer>
       <div class="logo-footer">
-        <img src="../code/img/a_cat.jpg" alt="Logo, black cat" />
+        <img src="img/a_cat.jpg" alt="Logo, black cat" />
         <span class="logoTextSpan">Michelle Wegler 2023</span>
       </div>
       <div class="footer-icons">
