--- a/code/index.html
+++ b/code/index.html
@@ -9,8 +9,8 @@
 <!-- Here comes the logo followed by the nav -->
      <div> 
       <header id="header">
-        <img src="./pictures/alabamalogo.jpg" class="logo" style="float: left; margin: 22px 0px 11px 0px;" alt="Alabama Pine Journal logo">
-        <img src="./pictures/pinetimessmaller.jpg" class="logosmaller" style="float: left; margin: 22px 0px 11px 7px;" alt="Alabama Pine Journal small-logo">
+        <img src="/pictures/alabamalogo.jpg" class="logo" style="float: left; margin: 22px 0px 11px 0px;" alt="Alabama Pine Journal logo">
+        <img src="/pictures/pinetimessmaller.jpg" class="logosmaller" style="float: left; margin: 22px 0px 11px 7px;" alt="Alabama Pine Journal small-logo">
           <br>        
             <nav class="navbar">
             <a href="http://www.google.com">ARCHIVE</a>
@@ -28,7 +28,7 @@
      <div>
       <section class="grid-parent">
         <div class="grid-item big-news-grid">
-          <img class="bignewspicture" src="./pictures/greenpines.jpeg" alt="Green pines from above" title="green-pines">
+          <img class="bignewspicture" src="/pictures/greenpines.jpeg" alt="Green pines from above" title="green-pines">
             <div class="bignewstext">
               <article>
                 <h1><a href="https://en.wikipedia.org/wiki/Sierra_Madre_Occidental">This is a beautiful tree!</a></h1>
@@ -39,35 +39,35 @@
          </div>
      </div> 
 <!-- Here´s more news(cards)  -->
-        <div class="grid-item more-news-grid"><img class="more-news-picture" src="./pictures/trafficlights.jpg" alt="Trafficlights in the night">
+        <div class="grid-item more-news-grid"><img class="more-news-picture" src="/pictures/trafficlights.jpg" alt="Trafficlights in the night">
           <h2><a href="https://www.shmoop.com/drivers-ed/alabama/traffic-lights-and-signals.html">Accedents due to broken traffic-lights along E75.</a></h2>
           <p class="morenewstext">Traffic lights around the Alabama area and especially the E75 is a hazzard...<br></p>
         </div>
-        <div class="grid-item more-news-grid"><img class="more-news-picture" src="./pictures/logs.jpeg" alt="Staked logs">
+        <div class="grid-item more-news-grid"><img class="more-news-picture" src="/pictures/logs.jpeg" alt="Staked logs">
           <h2><a href="https://en.wikipedia.org/wiki/Log_Lady">Loglady-<br>academy, 2023 nominations.</a></h2>
           <p class="morenewstext">Classic Alabama event is back: "After covid...<br></p>
         </div>
-        <div class="grid-item more-news-grid"><img class="more-news-picture" src="./pictures/fogpines.jpeg" alt="Fog in the woods">
+        <div class="grid-item more-news-grid"><img class="more-news-picture" src="/pictures/fogpines.jpeg" alt="Fog in the woods">
           <h2><a href="https://www.caryinstitute.org/news-insights/media-coverage/fog-connects-ecosystems">Scientists: Fog = Woods best friend</a></h2>
           <p class="morenewstext">Scientists agrees; fog or the moisture in the air is what the trees like...<br></p>
         </div>
-        <div class="grid-item more-news-grid"><img class="more-news-picture" src="./pictures/axe.jpeg" alt="Picture of an axe">
+        <div class="grid-item more-news-grid"><img class="more-news-picture" src="/pictures/axe.jpeg" alt="Picture of an axe">
           <h2><a href="https://www.arms-n-armor.com/blogs/news/what-new-with-the-burgundian-pole-axe">Axe-company expands in Alabama</a></h2>
           <p class="morenewstext">Finest steel and the hardest woods is the usp of the Alabama axe company, Woddy&Sones...<br></p>
         </div>
-        <div class="grid-item more-news-grid"><img class="more-news-picture" src="./pictures/foggywoods.jpeg" alt="Picture of woods and fog">
+        <div class="grid-item more-news-grid"><img class="more-news-picture" src="/pictures/foggywoods.jpeg" alt="Picture of woods and fog">
           <h2><a href="https://coveringclimatenow.org/?gclid=Cj0KCQiA_P6dBhD1ARIsAAGI7HAdnXMb-inUioq09SEtQJHgAOoGZK8LIh6A4xbHuhlO7y4YLExKxFcaAk64EALw_wcB">Climatechanges</a></h2>
           <p class="morenewstext">How does the undeniable climatechange affect the wood and...<br></p>
         </div>
-        <div class="grid-item more-news-grid"><img class="more-news-picture" src="./pictures/snowonpines.jpg" alt="Snow on pinetrees">
+        <div class="grid-item more-news-grid"><img class="more-news-picture" src="/pictures/snowonpines.jpg" alt="Snow on pinetrees">
           <h2><a href="https://www.britannica.com/place/Alabama-state/Climate">Winters has arrived</a></h2>
           <p class="morenewstext">The hardware store are bunkering salt and shovels. Winter is here and with that...<br></p>
         </div>
-        <div class="grid-item more-news-grid"><img class="more-news-picture" src="./pictures/workershand.jpg" alt="Craftsman working">
+        <div class="grid-item more-news-grid"><img class="more-news-picture" src="/pictures/workershand.jpg" alt="Craftsman working">
           <h2><a href="https://www.alabamawoodworker.com/">Local designer opens studio</a></h2>
           <p class="morenewstext">From furniture to exclusive artwork and jewleries, the local craftmans and designers...<br></p>
         </div>
-        <div class="grid-item more-news-grid"><img class="more-news-picture" src="./pictures/cameraman.jpg" alt="Cameraman filming">
+        <div class="grid-item more-news-grid"><img class="more-news-picture" src="/pictures/cameraman.jpg" alt="Cameraman filming">
           <h2><a href="https://www.youtube.com/watch?v=k_xKhHwqeW8">Leeland Hay new documentary</a></h2>
           <p class="morenewstext">The rarest among pines has its home i Mexico and ofcourse Alabamas own Leeland Hay is...<br></p>
         </div>
@@ -77,7 +77,7 @@
 <!-- And here comes the Flexbox footer with credits  -->
     <footer>
       <div class="flex-container">
-        <div>MADE BY <a href="http:/technigo.io"><img class="logo-technigo" src="./pictures/logo-technigo.jpeg" alt="Technigo logotype"></a> STUDENT ANDREAS AXELSSON</div> 
+        <div>MADE BY <a href="http:/technigo.io"><img class="logo-technigo" src="/pictures/logo-technigo.jpeg" alt="Technigo logotype"></a> STUDENT ANDREAS AXELSSON</div> 
       </div>
     </footer>
   </body>
