made changes per request

--- a/code/index.html
+++ b/code/index.html
@@ -29,7 +29,9 @@
       <!-- grid item, containing cards -->
       <div class="item-1">
             <a href="" class="card">
-              <div class="thumb" style="background-image: url('./loro2.jpg')"></div>
+              <div class="thumb">
+                <img src="./loro2.jpg" alt="Parrot2">
+              </div>
               <article>
                 <h1>What parrots eat in a day</h1>
                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the.</p>
@@ -41,7 +43,9 @@
       <!-- grid item, containing a card -->
       <div class="item-2">
         <a href="" class="card">
-          <div class="thumb" style="background-image: url('./loro1.jpg')"></div>
+          <div class="thumb">
+            <img src="./loro1.jpg" alt="Parrot1">
+          </div>
           <article>
             <h1>Loro means parrot in Spanish</h1>
             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
@@ -56,7 +60,9 @@
       <!-- grid item, containing a card -->
       <div class="item-3">
         <a href="" class="card">
-          <div class="thumb" style="background-image: url('./loro5.jpg')"></div>
+          <div class="thumb">
+            <img src="./loro5.jpg" alt="Parrot5">
+          </div>
           <article>
             <h1>What will parrots live by if the Amazon forrest...</h1>
             <p>It is a long established fact that a reader will be distracted by the 
@@ -69,7 +75,9 @@
       <!-- grid item, containing a card -->
       <div class="item-4">
         <a href="" class="card">
-          <div class="thumb" style="background-image: url('../code/loro7.jpg')"></div>
+          <div class="thumb">
+            <img src="./loro7.jpg" alt="Parrot7">
+          </div>
           <article>
             <h1>In the winter the parrot goes..</h1>
             <p>There are many variations of passages of Lorem Ipsum available, but the 
@@ -83,7 +91,9 @@
      <!-- grid item, containing a card -->
      <div class="item-5">
       <a href="" class="card">
-        <div class="thumb" style="background-image: url('../code/loro4.jpg')"></div>
+        <div class="thumb"> 
+          <img src="./loro4.jpg" alt="Parrot4">
+        </div>
         <article>
           <h1>Many people think this about the parrots</h1>
           <p>There are many variations of passages of Lorem Ipsum available, but the majority 
@@ -97,7 +107,9 @@
      <!-- grid item, containing a card -->
      <div class="item-6">
       <a href="" class="card">
-        <div class="thumb" style="background-image: url('../code/loro8.jpg')"></div>
+        <div class="thumb">
+          <img src="./loro8.jpg" alt="Parrot8">
+        </div>
         <article>
           <h1>Not all parrots partner for life</h1>
           <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.
@@ -110,7 +122,9 @@
      <!-- grid item, containing a card -->
      <div class="item-7">
       <a href=""class="card">
-        <div class="thumb" style="background-image: url('../code/loro3.jpg')"></div>
+        <div class="thumb">
+          <img src="./loro3.jpg" alt="Parrot3">
+        </div>
         <article>
           <h1>Where does the parrot hide the eggs?</h1>
           <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour</p>
