changed the relative path for the icon

--- a/code/index.html
+++ b/code/index.html
@@ -10,7 +10,7 @@
     <header>
       <!--Start of HEADER-->
       <div class="header">
-        <a href="#Home"><img src="../code/icon-parrot.png" alt="home-icon"></a>
+        <a href="#Home"><img src="./icon-parrot.png" alt="home-icon"></a>
         <a href="#Home" class="logo">Loro News</a>
           <div class="header-right">
             <a href="#home">Home</a>
