removed padding for big-img and p-big

--- a/code/index.html
+++ b/code/index.html
@@ -119,7 +119,7 @@
             </li>
             </a>
           
-            <a href="#">
+            <a href="https://www.instagram.com/johannaleonsson/">
             <li>
               <img src="./logo/igblk-logo.svg" alt="instagram" class="some-logo">
             </li>
