Updating GitHub Repo

--- a/code/index.html
+++ b/code/index.html
@@ -8,17 +8,24 @@
   </head>
   <body>
     <header>
-      <img class="logotype" src="./Images/Visit öland.png" alt="Logotype Visit Öland">
-      <nav class="navbar">  
-        <ul>
-          <div class="navbar-links 1"><li><a href="#"></a>Home</li></div>
-          <div class="navbar-links 2"><li><a href="#"></a>About</li></div>
-          <div class="navbar-links 3"><li><a href="#"></a>Contact</li></div>
-        </ul>
+      <nav class="header1">
+        <div class="logotype">
+          <img src="./Images/Visit öland.png" alt="Logotype Visit Öland">
+        </div>
+        <div class="navbar"></div>
+          <div class="links">  
+            <ul>
+            <li><a href="./index.html">Home</a></li>
+            <li><a href="./index.html">About</a></li>
+            <li><a href="./index.html">Contact</a></li>
+            </ul>
+        </div>
       </nav>
     </header>
-    <div>
-    <img class="panorama" src="./Images/himmelsberga.jpeg" alt="Picture of windmill"></div>
+<div>
+      <img class="panorama" src="./Images/himmelsberga.jpeg" alt="Picture of windmill">
+    </div>
+    
     <section class="big-news">
       <!-- The big news content -->
     </section>
