Button Styling, Footer, Font changes

--- a/code/index.html
+++ b/code/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The News Site: Cuppa News</title>
+    <title>Cuppa News</title>
     <link rel="stylesheet" href="./style.css" />
-    <link href='https://fonts.googleapis.com/css?family=Amita' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css2?family=Nunito' rel='stylesheet'>
     <!-- Done - dont forget the meta tag for responsiveness -->
   </head>
   <body>
@@ -132,11 +132,14 @@
       </div>
     </section>
     <footer>
-        <ul>
-          <li><a href="shop.asp">Shop</a></li>
-          <li><a href="contact.asp">Contact Us</a></li>
-        </ul>
-    </footer>
+      <div class="contactme">
+        <a href="https://www.linkedin.com/in/bridget-mailley/"><img src="./images/linkedinlogo.png" class="contact-logo" alt="small linkedin logo"></a>
+        <a href="https://github.com/beemailley"><img src="./images/githublogo.png" class="contact-logo" alt="small github logo"></a>
+      </div>
+      <div class="aboutme">
+        Designed by Bridget Mailley. Technigo Web Development Bootcamp 2023.
+       </div>
+      </footer>
   </body>
 </html>
 
