I believe I fixed the images to go to the relative path, should be visible on netlify. got rid of hamburger navbar and just have a navbar that changes order for tablet

--- a/code/index.html
+++ b/code/index.html
@@ -14,29 +14,17 @@
         <div class="logo-container">
           <img src="logo.svg" alt="logo for site">
         </div>
-        <nav>
-          <div class="navbar">
-            <div class="container nav-container">
-                <input class="checkbox" type="checkbox" name="" id="" />
-                <div class="hamburger-lines">
-                  <span class="line line1"></span>
-                  <span class="line line2"></span>
-                  <span class="line line3"></span>
-                </div>  
-                <div class="menu-items">
-                  <li><a href="#">Home</a></li>
-                  <li><a href="#">Media</a></li>
-                  <li><a href="#">About</a></li>
-                </div>
-            </div>
-          </div>
-        </nav>
+        <div class="navigation">
+          <a class="active" href="#">Home</a>
+          <a href="#">About</a>
+          <a href="#">Media</a>
+        </div>
       </section>
     </header>
 
     <section class="big-news">
        <div class="cats">
-        <img class="cat-image" src="C:\Users\oscar\OneDrive\Desktop\technigo-projects\project-news-site\code\Images\pexels-pixabay-416160.jpg" alt="Cat Picture main story"/>
+        <img class="cat-image" src="./Images/pexels-pixabay-416160.jpg" alt="Cat Picture main story"/>
        </div>  
       <h1>Cat Attack!</h1>
           <p1> I thought I'd be able to put my own pictures in here, but it turns out that would be really difficult I think! So we're doing this instead. Hopefully there are stock images of both cats and tattoos or else my web page name makes no sense!</p1> 
@@ -44,28 +32,28 @@
 
     <section class="small-news">
       <div class="small-news-article">Here's a Tattoo
-        <img src="C:\Users\oscar\OneDrive\Desktop\technigo-projects\project-news-site\code\Images\pexels-ralph-rabago-3214690.jpg" alt="first tat article">
+        <img src="./Images/pexels-ralph-rabago-3214690.jpg" alt="first tat article">
       </div>
       <div class="small-news-article">Here's a cat too!
-        <img src="C:\Users\oscar\OneDrive\Desktop\technigo-projects\project-news-site\code\Images\pexels-pixabay-208984.jpg" alt="first cat article">
+        <img src="./Images/pexels-pixabay-208984.jpg" alt="first cat article">
       </div>
       <div class="small-news-article">More tats!
-        <img src="C:\Users\oscar\OneDrive\Desktop\technigo-projects\project-news-site\code\Images\pexels-tim-samuel-5845304.jpg" alt="second tat article">
+        <img src="./Images/pexels-tim-samuel-5845304.jpg" alt="second tat article">
       </div>
       <div class="small-news-article">More cats!
-        <img src="C:\Users\oscar\OneDrive\Desktop\technigo-projects\project-news-site\code\Images\pexels-pixabay-45170.jpg" alt="second cat article">
+        <img src="./Images/pexels-pixabay-45170.jpg" alt="second cat article">
       </div>
       <div class="small-news-article">Tats
-        <img src="C:\Users\oscar\OneDrive\Desktop\technigo-projects\project-news-site\code\Images\pexels-lil-artsy-1461816.jpg" alt="third tat article">
+        <img src="./Images/pexels-lil-artsy-1461816.jpg" alt="third tat article">
       </div>
       <div class="small-news-article">Cats
-        <img src="C:\Users\oscar\OneDrive\Desktop\technigo-projects\project-news-site\code\Images\pexels-katarzyna-modrzejewska-1314550.jpg" alt="third cat article">
+        <img src="./Images/pexels-katarzyna-modrzejewska-1314550.jpg" alt="third cat article">
       </div>
       <div class="small-news-article">Finally, Tattoos
-        <img src="C:\Users\oscar\OneDrive\Desktop\technigo-projects\project-news-site\code\Images\pexels-kevin-bidwell-2183131.jpg" alt="fourth tat article">
+        <img src="./Images/pexels-kevin-bidwell-2183131.jpg" alt="fourth tat article">
       </div>
       <div class="small-news-article">Little Kitty Cat
-        <img src="C:\Users\oscar\OneDrive\Desktop\technigo-projects\project-news-site\code\Images\pexels-cats-coming-1605481.jpg" alt="fourth cat article">
+        <img src="./Images/pexels-cats-coming-1605481.jpg" alt="fourth cat article">
       </div>
     </section>
   </body>
