Hid article text in tablet & mobile

--- a/code/index.html
+++ b/code/index.html
@@ -42,7 +42,7 @@
             Former President Trump Honored with Golden Statue in Pyongyang,
             North Korea
           </h3>
-          <p>
+          <p class="flex-child big-article-text-desktop">
             PYONGYANG, NORTH KOREA — In a surprise move, the North Korean
             government unveiled a statue of former President of the United
             States, Donald Trump, in the center of Pyongyang. The statue, which
@@ -52,9 +52,9 @@
             was attended by North Korean leader Kim Jong-un, who praised
             President Trump for his efforts to bring peace and stability to the
             Korean Peninsula and for improving relations between the two
-            countries during his time as President.
-          </p>
-          <p class="flex-child big-article-text-desktop">
+            countries during his time as President.<br />
+            <br />
+
             The unveiling of the statue was met with mixed reactions. Some North
             Koreans praised the government for honoring a former US leader,
             while others criticized the decision, citing the historically
@@ -74,44 +74,52 @@
       </div>
       <div class="grid-item small-grid-item">
         <img src="pizza_bear.jpg" class="small-article-image" />
-        <h4>
+        <h4 class="little-margin">
           Pizzagate 2.0? American Black Bear Completes 8-Hour Shift at Local
           Pizzeria
         </h4>
       </div>
       <div class="grid-item small-grid-item">
         <img src="helsinki_palm.jpg" class="small-article-image" />
-        <h4>
+        <h4 class="little-margin">
           As Global Temperatures Soar, Helsinki Plants 1,000 Palm Trees Along
           Southernmost Streets
         </h4>
       </div>
       <div class="grid-item small-grid-item">
         <img src="president_jobs.jpg" class="small-article-image" />
-        <h4>He's Back! A Resurrected Steve Jobs Runs for President</h4>
+        <h4 class="little-margin">
+          He's Back! A Resurrected Steve Jobs Runs for President
+        </h4>
       </div>
       <div class="grid-item small-grid-item">
         <img src="kanye_argentina.jpg" class="small-article-image" />
-        <h4>In a Highly Suspicious Move, Kanye West Moves to Argentina</h4>
+        <h4 class="little-margin">
+          In a Highly Suspicious Move, Kanye West Moves to Argentina
+        </h4>
       </div>
       <div class="grid-item small-grid-item">
         <img src="second_chernobyl.jpg" class="small-article-image" />
-        <h4>Dormant Chernobyl Power Plant Inexplicably Explodes Again</h4>
+        <h4 class="little-margin">
+          Dormant Chernobyl Power Plant Inexplicably Explodes Again
+        </h4>
       </div>
       <div class="grid-item small-grid-item">
         <img src="hotair_restaurant.png" class="small-article-image" />
-        <h4>Michelin Star Restaurant in Stockholm Serving Hot Air</h4>
+        <h4 class="little-margin">
+          Michelin Star Restaurant in Stockholm Serving Hot Air
+        </h4>
       </div>
       <div class="grid-item small-grid-item">
         <img src="anubis.png" class="small-article-image" />
-        <h4>
+        <h4 class="little-margin">
           The First Furry? Fursuit Bearing the Likeness of Anubis Found in
           Tutankhamon's Grave
         </h4>
       </div>
       <div class="grid-item small-grid-item">
         <img src="cyborg_baby.png" class="small-article-image" />
-        <h4>
+        <h4 class="little-margin">
           New Milestone in AI Development as First "Baby" is Born of Cyborg
           Parents in Liechtenstein
         </h4>
