Added burger menu

--- a/code/index.html
+++ b/code/index.html
@@ -8,6 +8,7 @@
     <link rel=" stylesheet" href="./style.css" />
     <link rel="stylesheet" href="./responsiveStyle.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    
 
 </head>
 
@@ -17,7 +18,8 @@
             <img class="headerLogo" src="images/logo.PNG" alt="" />
             <img class="tnLogo" src="images/TNlogo.PNG" alt="" />
         </div>
-        <ul class="mainNavbar">
+        <img class="burger" id="burger" src="Images/burger.png" alt="" />
+        <ul class="mainNavbar" id="mainNavbar">
             <li><a href="https://soft-alpaca-e30a0d.netlify.app/">Home</a></li>
             <li><a href="https://www.bangkokpost.com/thailand">News</a></li>
             <li><a href="https://www.bangkokpost.com/world">World</a></li>
@@ -109,3 +111,5 @@
 </body>
 
 </html>
+
+<script src="script.js"></script>
